# parallel_mpi

./: input2  testparallel.py
parallel-mpi/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  parallel
parallel-not/: .gitignore  CMakeLists.txt  Timer.h  input3  main.cpp  parallel
parallel-pthread/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  parallel
report/: report.tex  settings.tex  title.tex
